--- a/app.html
+++ b/app.html
@@ -352,6 +352,16 @@
 	.colored{
 		background: dodgerblue;
 	}
+	.terms{
+		margin-top: 20px;
+	}
+	.terms p{
+		color: rgba(0, 0, 0, 0.5);
+	}
+	.terms span{
+		color: #000;
+		margin-left: 10px;
+	}
   </style>
 </head>
   <body>
