--- a/app.html
+++ b/app.html
@@ -353,9 +353,10 @@
 		background: dodgerblue;
 	}
 	.terms{
-		margin-top: 20px;
+		margin-top: 50px;
 	}
 	.terms p{
+		margin-bottom: 5px;
 		color: rgba(0, 0, 0, 0.5);
 	}
 	.terms span{
