--- a/app.html
+++ b/app.html
@@ -356,8 +356,9 @@
 		margin-top: 50px;
 	}
 	.terms p{
-		margin-bottom: 5px;
+		margin: 0;
 		color: rgba(0, 0, 0, 0.5);
+		font-size: 12px;
 	}
 	.terms span{
 		color: #000;
