--- a/app.html
+++ b/app.html
@@ -356,9 +356,9 @@
 		margin-top: 50px;
 	}
 	.terms p{
-		margin: 0;
+		margin: 2px;
 		color: rgba(0, 0, 0, 0.5);
-		font-size: 12px;
+		font-size: 14px;
 	}
 	.terms span{
 		color: #000;
