--- a/app.html
+++ b/app.html
@@ -368,8 +368,8 @@
 		border: 1px solid #ccc;
 	}
 	.histHead{
-		display: gird;
-		gird-template-columns: 1fr 7fr 3fr;
+		display: grid;
+		grid-template-columns: 1fr 7fr 3fr;
 	}
   </style>
 </head>
