--- a/app.html
+++ b/app.html
@@ -371,6 +371,11 @@
 		display: grid;
 		grid-template-columns: 1fr 7fr 3fr;
 	}
+	.histOne{
+		align-items: center;
+	}
+	.histTwo{
+	}
   </style>
 </head>
   <body>
