--- a/app.html
+++ b/app.html
@@ -516,7 +516,7 @@
 						<i class="fa fa-clock" aria-hidden="true"></i>
 					</div>
 					<div class="histTwo">
-						<h4>head</h4>
+						<p>head</p>
 					</div>
 					<div class="histThree">
 						<h4>finish</h4>
