--- a/app.html
+++ b/app.html
@@ -365,7 +365,9 @@
 		margin-left: 10px;
 	}
 	.history{
+		margin: 30px;
 		border: 1px solid #ccc;
+		border-radius: 10px;
 	}
 	.histHead{
 		display: grid;
@@ -511,6 +513,7 @@
 			</div>
 
 			<div class="history">
+				<h4>History</h4>
 				<div class="histHead">
 					<div class="histOne">
 						<i class="fa fa-clock" aria-hidden="true"></i>
