--- a/app.html
+++ b/app.html
@@ -364,8 +364,10 @@
 		color: #000;
 		margin-left: 10px;
 	}
+	.historySep{
+		margin-top: 40px;
+	}
 	.history{
-		margin: 30px;
 		border: 1px solid #ccc;
 		border-radius: 10px;
 	}
@@ -512,8 +514,9 @@
 				<p>Fee <span>0%</span></p>
 			</div>
 
-			<div class="history">
+			<div class="historySep">
 				<h4>History</h4>
+				<div class="history">
 				<div class="histHead">
 					<div class="histOne">
 						<i class="fa fa-clock" aria-hidden="true"></i>
@@ -533,6 +536,7 @@
 						
 					</div>
 				</div>
+			</div>
 			</div>
 		
           </div>
