--- a/app.html
+++ b/app.html
@@ -379,7 +379,21 @@
 		margin: auto;
 	}
 	.histTwo{
+		
 	}
+	.histThree{
+		
+	}
+	.histBottom{
+		display: grid;
+		grid-template-columns: 1fr 9fr;
+	}
+	.histFour{
+		margin: auto;
+	}
+	.histFive{
+	}
+	
   </style>
 </head>
   <body>
@@ -530,7 +544,7 @@
 				</div>
 				<div class="histBottom">
 					<div class="histFour">
-						
+						<i class="fa fa-clock" aria-hidden="true"></i>	
 					</div>
 					<div class="histFive">
 						
