--- a/app.html
+++ b/app.html
@@ -377,11 +377,14 @@
 	}
 	.histOne{
 		margin: auto;
+		border: 1px solid red;
 	}
 	.histTwo{
+		border: 1px solid red;
 		
 	}
 	.histThree{
+		border: 1px solid red;
 		
 	}
 	.histBottom{
@@ -389,9 +392,11 @@
 		grid-template-columns: 1fr 9fr;
 	}
 	.histFour{
+		border: 1px solid red;
 		margin: auto;
 	}
 	.histFive{
+		border: 1px solid red;
 	}
 	
   </style>
