--- a/app.html
+++ b/app.html
@@ -541,10 +541,15 @@
 						<i class="fa fa-clock" aria-hidden="true"></i>
 					</div>
 					<div class="histTwo">
-						<p>head</p>
+						<h4>Deposit</h4>
+						<p>18 Dec, 14:49</p>
+						<p>Invoice ID 2038718845</p>
 					</div>
 					<div class="histThree">
-						<h4>finish</h4>
+						<h4>+ 20 000.00 NGN</h4>
+						<ul>
+							<li>Done</li>
+						</ul>
 					</div>
 				</div>
 				<div class="histBottom">
