--- a/app.html
+++ b/app.html
@@ -557,7 +557,7 @@
 						<i class="fa fa-clock" aria-hidden="true"></i>	
 					</div>
 					<div class="histFive">
-						<p>Online Bank Tra...<i class="fa fa-clock" aria-hidden="true"><span>ex</span>131734923</i></p>
+						<p>Online Bank Tra...<i class="fa fa-clock" aria-hidden="true"></i><span>ex</span>131734923</p>
 					</div>
 				</div>
 			</div>
