--- a/app.html
+++ b/app.html
@@ -398,6 +398,9 @@
 	.histFive{
 		border: 1px solid red;
 	}
+	.histSix{
+		border: 1px solid red;
+	}
 	
   </style>
 </head>
@@ -557,7 +560,10 @@
 						<i class="fa fa-clock" aria-hidden="true"></i>	
 					</div>
 					<div class="histFive">
-						<p>Online Bank Tra...<i class="fa fa-clock" aria-hidden="true"></i><span>ex</span>131734923</p>
+						<p>Online Bank Tra...<i class="fa fa-clock" aria-hidden="true"></i><span>ex</span></p>
+					</div>
+					<div class="histSix">
+						<p>131734923</p>
 					</div>
 				</div>
 			</div>
