--- a/app.html
+++ b/app.html
@@ -389,7 +389,7 @@
 	}
 	.histBottom{
 		display: grid;
-		grid-template-columns: 1fr 9fr;
+		grid-template-columns: 1fr 6fr 4fr;
 	}
 	.histFour{
 		border: 1px solid red;
