--- a/app.html
+++ b/app.html
@@ -379,9 +379,9 @@
 		margin: auto;
 		border: 1px solid red;
 	}
-	.histTwo{
+	.histTwo h4, .histTwo p{
 		border: 1px solid red;
-		
+		margin: 0;
 	}
 	.histThree{
 		border: 1px solid red;
