--- a/app.html
+++ b/app.html
@@ -541,7 +541,7 @@
 				<div class="history">
 				<div class="histHead">
 					<div class="histOne">
-						<i class="fa fa-clock" aria-hidden="true"></i>
+						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
 					</div>
 					<div class="histTwo">
 						<h4>Deposit</h4>
@@ -560,18 +560,47 @@
 						<i class="fa fa-clock" aria-hidden="true"></i>	
 					</div>
 					<div class="histFive">
-						<p>Online Bank Tra...<i class="fa fa-clock" aria-hidden="true"></i><span>ex</span></p>
+						<p>Online Bank Tra...<i class="fa fa-long-arrow-right" aria-hidden="true"></i><span>ex</span></p>
 					</div>
 					<div class="histSix">
 						<p>131734923</p>
 					</div>
 				</div>
-			</div>
-			</div>
-		
+				</div>
+
+				<div class="history">
+				<div class="histHead">
+					<div class="histOne">
+						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+					</div>
+					<div class="histTwo">
+						<h4>Deposit</h4>
+						<p>18 Dec, 14:49</p>
+						<p>Invoice ID 2038718845</p>
+					</div>
+					<div class="histThree">
+						<h4>+ 20 000.00 NGN</h4>
+						<ul>
+							<li>Done</li>
+						</ul>
+					</div>
+				</div>
+				<div class="histBottom">
+					<div class="histFour">
+						<i class="fa fa-clock" aria-hidden="true"></i>	
+					</div>
+					<div class="histFive">
+						<p>Online Bank Tra...<i class="fa fa-long-arrow-right" aria-hidden="true"></i><span>ex</span></p>
+					</div>
+					<div class="histSix">
+						<p>131734923</p>
+					</div>
+				</div>	
+				</div>
+				
           </div>
         </div>
-		
+	  </div>
 	</div>
     <script src="sw.js"></script>
   </body>
