--- a/app.html
+++ b/app.html
@@ -571,7 +571,7 @@
 				<div class="history">
 				<div class="histHead">
 					<div class="histOne">
-						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+						<i class="fa fa-exchange" aria-hidden="true"></i>
 					</div>
 					<div class="histTwo">
 						<h4>Deposit</h4>
