--- a/app.html
+++ b/app.html
@@ -557,7 +557,7 @@
 				</div>
 				<div class="histBottom">
 					<div class="histFour">
-						<i class="fa fa-clock" aria-hidden="true"></i>	
+						<i class="fa fa-television" aria-hidden="true"></i>
 					</div>
 					<div class="histFive">
 						<p>Online Bank Tra...<i class="fa fa-long-arrow-right" aria-hidden="true"></i><span>ex</span></p>
@@ -587,7 +587,7 @@
 				</div>
 				<div class="histBottom">
 					<div class="histFour">
-						<i class="fa fa-clock" aria-hidden="true"></i>	
+						<i class="fa fa-television" aria-hidden="true"></i>	
 					</div>
 					<div class="histFive">
 						<p>Online Bank Tra...<i class="fa fa-long-arrow-right" aria-hidden="true"></i><span>ex</span></p>
