--- a/app.html
+++ b/app.html
@@ -370,6 +370,7 @@
 	.history{
 		border: 1px solid #ccc;
 		border-radius: 10px;
+		margin-bottom: 10px;
 	}
 	.histHead{
 		display: grid;
@@ -379,13 +380,14 @@
 		margin: auto;
 		border: 1px solid red;
 	}
-	.histTwo h4, .histTwo p{
+	.histTwo p{
 		border: 1px solid red;
 		margin: 0;
 	}
-	.histThree{
+	.histThree ul{
 		border: 1px solid red;
-		
+		margin: 0;
+		background: #008000;
 	}
 	.histBottom{
 		display: grid;
