--- a/app.html
+++ b/app.html
@@ -378,11 +378,9 @@
 	}
 	.histOne{
 		margin: auto;
-		border: 1px solid red;
 	}
-	.histTwo p{
-		border: 1px solid red;
-		margin: 0;
+	.histTwo p, .histTwo{
+		margin-bottom: 5px;
 	}
 	.histThree ul{
 		border: 1px solid red;
