--- a/app.html
+++ b/app.html
@@ -379,8 +379,14 @@
 	.histOne{
 		margin: auto;
 	}
+	.histOne i{
+		font-size: 16px;
+	}
+	.histTwo{
+		padding-left: 2px;
+	}
 	.histTwo p, .histTwo{
-		margin-bottom: 5px;
+		margin-bottom: 2px;
 	}
 	.histThree ul{
 		border: 1px solid red;
