--- a/app.html
+++ b/app.html
@@ -385,7 +385,7 @@
 	.histTwo{
 		padding-left: 2px;
 	}
-	.histTwo p, .histTwo{
+	.histTwo p, .histTwo h4{
 		margin-bottom: 2px;
 	}
 	.histThree ul{
