--- a/app.html
+++ b/app.html
@@ -383,7 +383,7 @@
 		font-size: 16px;
 	}
 	.histTwo{
-		padding-left: 2px;
+		border: 1px solid red;
 	}
 	.histTwo p, .histTwo h4{
 		margin-bottom: 2px;
