--- a/app.html
+++ b/app.html
@@ -383,10 +383,11 @@
 		font-size: 16px;
 	}
 	.histTwo{
+		padding-top: 5px;
 		border: 1px solid red;
 	}
 	.histTwo p, .histTwo h4{
-		margin-bottom: 0px;
+		margin: 2px 0;
 	}
 	.histThree ul{
 		border: 1px solid red;
