--- a/app.html
+++ b/app.html
@@ -388,7 +388,9 @@
 	.histTwo p, .histTwo h4{
 		margin: 2px 0;
 	}
-	.histThree ul{
+	.histThree{
+	}
+	.histThree ul li{
 		border: 1px solid red;
 		margin: 0;
 		background: #008000;
