--- a/app.html
+++ b/app.html
@@ -385,14 +385,18 @@
 	.histTwo{
 		border: 1px solid red;
 	}
+	.histTwo h4{
+		margin-bottom: 2px;
+	}
 	.histTwo p{
 		margin: 2px 0;
 	}
 	.histThree{
 	}
-	.histThree ul li{
+	.histThree ul{
 		border: 1px solid red;
 		margin: 0;
+		padding-left: 1rem;
 		background: #008000;
 	}
 	.histBottom{
