--- a/app.html
+++ b/app.html
@@ -395,8 +395,8 @@
 	}
 	.histThree ul{
 		border: 1px solid red;
-		margin: 0;
-		padding-left: 1rem;
+		margin: auto;
+		padding-left: 2rem;
 		background: #008000;
 	}
 	.histBottom{
