--- a/app.html
+++ b/app.html
@@ -383,13 +383,10 @@
 		font-size: 16px;
 	}
 	.histTwo{
-		border: 1px solid red;
+		align-items: center;
 	}
-	.histTwo h4{
+	.histTwo h4, .histTwo p{
 		margin-bottom: 2px;
-	}
-	.histTwo p{
-		margin: 2px 0;
 	}
 	.histThree{
 	}
