--- a/app.html
+++ b/app.html
@@ -393,8 +393,10 @@
 	.histThree ul{
 		border: 1px solid red;
 		margin: auto;
-		padding-left: 2rem;
 		background: #008000;
+	}
+	.histThree ul li{
+		padding-left: 1px;
 	}
 	.histBottom{
 		display: grid;
