--- a/app.html
+++ b/app.html
@@ -394,9 +394,11 @@
 		border: 1px solid red;
 		margin: auto;
 		background: #008000;
+		width: 30%;
+		border-radius: 5px;
 	}
 	.histThree ul li{
-		padding-left: 1px;
+		padding-left: 0.5px;
 	}
 	.histBottom{
 		display: grid;
