--- a/app.html
+++ b/app.html
@@ -385,7 +385,11 @@
 	.histTwo{
 		align-items: center;
 	}
-	.histTwo h4, .histTwo p{
+	.histTwo h4{
+		margin-bottom: 1px;
+	}
+	
+	.histTwo p{
 		margin: 1px 0;
 	}
 	.histThree{
@@ -393,7 +397,7 @@
 	.histThree ul{
 		border: 1px solid red;
 		margin: auto;
-		background: #008000;
+		background: #E6F8E6;
 		width: 30%;
 		border-radius: 5px;
 	}
