--- a/app.html
+++ b/app.html
@@ -394,15 +394,18 @@
 	}
 	.histThree{
 	}
+	.histThree{
+	}
 	.histThree ul{
 		border: 1px solid red;
-		margin: auto;
-		background: #E6F8E6;
+		margin: 0 auto;
+		text-align: center(
+		background: #ccffcc;
 		width: 30%;
 		border-radius: 5px;
 	}
 	.histThree ul li{
-		padding-left: 0.5px;
+		padding-left: 0px;
 	}
 	.histBottom{
 		display: grid;
