--- a/app.html
+++ b/app.html
@@ -399,7 +399,7 @@
 	.histThree ul{
 		border: 1px solid red;
 		margin: 0 auto;
-		text-align: center(
+		text-align: center;
 		background: #ccffcc;
 		width: 30%;
 		border-radius: 5px;
