--- a/app.html
+++ b/app.html
@@ -394,18 +394,18 @@
 	}
 	.histThree{
 	}
-	.histThree{
+	.histThree h4{
 	}
 	.histThree ul{
 		border: 1px solid red;
-		margin: 0 auto;
+		padding: 0px;
 		text-align: center;
-		background: #ccffcc;
+		background: #C6F4D6;
 		width: 30%;
 		border-radius: 5px;
 	}
 	.histThree ul li{
-		padding-left: 0px;
+		margin-left: 0px;
 	}
 	.histBottom{
 		display: grid;
