--- a/app.html
+++ b/app.html
@@ -395,11 +395,13 @@
 	.histThree{
 	}
 	.histThree h4{
+		margin-bottom: 10px;
 	}
 	.histThree ul{
 		text-align: center;
 		background: #C6F4D6;
-		width: 30%;
+		width: auto;
+		margin: auto;
 		border-radius: 5px;
 	}
 	.histBottom{
