--- a/app.html
+++ b/app.html
@@ -400,7 +400,7 @@
 	.histThree ul{
 		text-align: center;
 		background: #C6F4D6;
-		width: auto;
+		width: 20%;
 		margin: auto;
 		border-radius: 5px;
 	}
