--- a/app.html
+++ b/app.html
@@ -399,10 +399,13 @@
 	}
 	.histThree ul{
 		text-align: center;
-		background: #C6F4D6;
-		width: 20%;
+		background: #D0F7E0;
+		width: 10%;
 		margin: auto;
 		border-radius: 5px;
+	}
+	.histThree ul li{
+		background: #D0F7E0;
 	}
 	.histBottom{
 		display: grid;
