--- a/app.html
+++ b/app.html
@@ -403,9 +403,8 @@
 		width: 10%;
 		margin: auto;
 		border-radius: 5px;
-	}
-	.histThree ul li{
-		background: #D0F7E0;
+		position: relative;
+		left: 5px;
 	}
 	.histBottom{
 		display: grid;
