--- a/app.html
+++ b/app.html
@@ -393,6 +393,7 @@
 		margin: 1px 0;
 	}
 	.histThree{
+		position: relative;
 	}
 	.histThree h4{
 		margin-bottom: 10px;
@@ -400,11 +401,11 @@
 	.histThree ul{
 		text-align: center;
 		background: #D0F7E0;
-		width: 10%;
+		width: 2px;
 		margin: auto;
 		border-radius: 5px;
-		position: relative;
-		left: 5px;
+		position: absolute;
+		left: 50%;
 	}
 	.histBottom{
 		display: grid;
