--- a/app.html
+++ b/app.html
@@ -402,10 +402,9 @@
 		text-align: center;
 		background: #D0F7E0;
 		width: 2px;
-		margin: auto;
 		border-radius: 5px;
 		position: absolute;
-		left: 50%;
+		right: 50%;
 	}
 	.histBottom{
 		display: grid;
