--- a/app.html
+++ b/app.html
@@ -397,14 +397,13 @@
 	}
 	.histThree h4{
 		margin-bottom: 10px;
-	}
-	.histThree ul{
-		text-align: center;
+	}	
+	.histThree p{
+		margin: 0;
 		background: #D0F7E0;
-		width: 2px;
-		border-radius: 5px;
-		position: absolute;
-		right: 50%;
+	}
+	.histThree p i{
+		font-size: 10px;
 	}
 	.histBottom{
 		display: grid;
@@ -569,9 +568,7 @@
 					</div>
 					<div class="histThree">
 						<h4>+ 20 000.00 NGN</h4>
-						<ul>
-							<li>Done</li>
-						</ul>
+						<p><i class="fa fa-circle" aria-hidden="true"></i>Done</p>
 					</div>
 				</div>
 				<div class="histBottom">
@@ -599,9 +596,7 @@
 					</div>
 					<div class="histThree">
 						<h4>+ 20 000.00 NGN</h4>
-						<ul>
-							<li>Done</li>
-						</ul>
+						<p><i class="fa fa-circle" aria-hidden="true"></i>Done</p>
 					</div>
 				</div>
 				<div class="histBottom">
