--- a/app.html
+++ b/app.html
@@ -401,9 +401,12 @@
 	.histThree p{
 		margin: 0;
 		background: #D0F7E0;
+		text-align: center;
+		width: auto;
 	}
 	.histThree p i{
-		font-size: 10px;
+		font-size: 8px;
+		margin: auto 5px;
 	}
 	.histBottom{
 		display: grid;
