--- a/app.html
+++ b/app.html
@@ -400,14 +400,15 @@
 	}	
 	.histThree p{
 		margin: 0;
+		display: inline-block;
 		background: #D0F7E0;
 		text-align: center;
 		width: auto;
 		align-items: center;
 	}
-	.histThree p i{
+	.histThree i{
 		font-size: 8px;
-		margin: auto 5px;
+		margin: auto;
 	}
 	.histBottom{
 		display: grid;
