--- a/app.html
+++ b/app.html
@@ -573,7 +573,9 @@
 					</div>
 					<div class="histThree">
 						<h4>+ 20 000.00 NGN</h4>
-						<p><i class="fa fa-circle" aria-hidden="true"></i>Done</p>
+						<div class="status">
+							<i class="fa fa-circle" aria-hidden="true"></i><p>Done</p>
+						</div>
 					</div>
 				</div>
 				<div class="histBottom">
@@ -601,7 +603,9 @@
 					</div>
 					<div class="histThree">
 						<h4>+ 20 000.00 NGN</h4>
-						<p><i class="fa fa-circle" aria-hidden="true"></i>Done</p>
+						<div class="status">
+							<i class="fa fa-circle" aria-hidden="true"></i><p>Done</p>
+						</div>
 					</div>
 				</div>
 				<div class="histBottom">
