--- a/app.html
+++ b/app.html
@@ -398,15 +398,13 @@
 	.histThree h4{
 		margin-bottom: 10px;
 	}	
-	.histThree p{
-		margin: 0;
+	.status{
 		display: inline-block;
 		background: #D0F7E0;
-		text-align: center;
-		width: auto;
+		justify-content: center;
 		align-items: center;
 	}
-	.histThree i{
+	.status i{
 		font-size: 8px;
 		margin: auto;
 	}
