--- a/app.html
+++ b/app.html
@@ -399,7 +399,7 @@
 		margin-bottom: 10px;
 	}	
 	.status{
-		display: inline-block;
+		display: inline-flex;
 		background: #D0F7E0;
 		justify-content: center;
 		align-items: center;
