--- a/app.html
+++ b/app.html
@@ -401,12 +401,15 @@
 	.status{
 		display: inline-flex;
 		background: #D0F7E0;
-		justify-content: center;
+		margin: auto;
 		align-items: center;
 	}
 	.status i{
 		font-size: 8px;
 		margin: auto;
+	}
+	.status p{
+		margin: 0 0 0 5px;
 	}
 	.histBottom{
 		display: grid;
