--- a/app.html
+++ b/app.html
@@ -401,12 +401,13 @@
 	.status{
 		display: inline-flex;
 		background: #D0F7E0;
-		margin: auto;
+		padding: 2px;
+		border-radius: 5px;
+		text-align: center;
 		align-items: center;
 	}
 	.status i{
 		font-size: 8px;
-		margin: auto;
 	}
 	.status p{
 		margin: 0 0 0 5px;
