--- a/app.html
+++ b/app.html
@@ -402,8 +402,8 @@
 	.status{
 		display: inline-flex;
 		background: #D0F7E0;
-		padding: 5px;
-		border-radius: 10px;
+		padding: 2px 10px;
+		border-radius: 15px;
 		align-items: center;
 	}
 	.status i{
