--- a/app.html
+++ b/app.html
@@ -417,11 +417,21 @@
 		grid-template-columns: 1.5fr 5.5fr 4fr;
 	}
 	.histFour{
-		border: 1px solid red;
+		border-radius: 50%;
+		background: #ccc;
+		padding: 2px;
 		margin: auto;
 	}
 	.histFive{
 		border: 1px solid red;
+	}
+	.histFive p{
+	}
+	.histFive i{
+	}
+	.histFive span{
+		background: #ccc;
+		color: #fff;
 	}
 	.histSix{
 		border: 1px solid red;
