--- a/app.html
+++ b/app.html
@@ -411,6 +411,7 @@
 	}
 	.status p{
 		margin: 0 0 0 5px;
+		font-size: 14px;
 	}
 	.histBottom{
 		display: grid;
@@ -432,6 +433,8 @@
 	.histFive span{
 		background: #ccc;
 		color: #fff;
+		padding: 5px;
+		font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
 	.histSix{
 		border: 1px solid red;
