--- a/app.html
+++ b/app.html
@@ -433,7 +433,7 @@
 	.histFive span{
 		background: #ccc;
 		color: #fff;
-		padding: 5px;
+		padding: 2px 5px;
 		font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
 	.histSix{
