--- a/app.html
+++ b/app.html
@@ -434,6 +434,7 @@
 		background: #ccc;
 		color: #fff;
 		padding: 2px 5px;
+		font-size: 14px;
 		font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
 	.histSix{
