--- a/app.html
+++ b/app.html
@@ -431,9 +431,9 @@
 	.histFive i{
 	}
 	.histFive span{
-		background: #ccc;
+		background: #bbb;
 		color: #fff;
-		padding: 2px 5px;
+		padding: 1px 6px;
 		font-size: 14px;
 		font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
