--- a/app.html
+++ b/app.html
@@ -429,9 +429,11 @@
 	.histFive p{
 	}
 	.histFive i{
+		margin: 0 10px;
 	}
 	.histFive span{
 		background: #bbb;
+		font-weight: bold;
 		color: #fff;
 		padding: 1px 6px;
 		font-size: 14px;
