--- a/app.html
+++ b/app.html
@@ -420,13 +420,15 @@
 	.histFour{
 		border-radius: 50%;
 		background: #ccc;
-		padding: 2px;
+		padding: 5px;
 		margin: auto;
+		color: #fff;
+		font-size: 10px;
 	}
 	.histFive{
-		border: 1px solid red;
 	}
 	.histFive p{
+		color: #bbb;
 	}
 	.histFive i{
 		margin: 0 5px;
