--- a/app.html
+++ b/app.html
@@ -442,8 +442,9 @@
 		font-size: 14px;
 		font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
-	.histSix{
-		border: 1px solid red;
+	.histSix p{
+		font-size: 14px;
+		color: #bbb;
 	}
 	
   </style>
