--- a/app.html
+++ b/app.html
@@ -428,7 +428,7 @@
 	.histFive{
 	}
 	.histFive p{
-		color: #bbb;
+		color: #aaa;
 	}
 	.histFive i{
 		margin: 0 5px;
@@ -444,7 +444,7 @@
 	}
 	.histSix p{
 		font-size: 14px;
-		color: #bbb;
+		color: #aaa;
 	}
 	
   </style>
