--- a/app.html
+++ b/app.html
@@ -371,6 +371,7 @@
 		border: 1px solid #ccc;
 		border-radius: 10px;
 		margin-bottom: 10px;
+		color: rgba(0, 0, 0, 0.7);
 	}
 	.histHead{
 		display: grid;
@@ -391,6 +392,7 @@
 	
 	.histTwo p{
 		margin: 1px 0;
+		color: #aaa;
 	}
 	.histThree{
 		position: relative;
