--- a/app.html
+++ b/app.html
@@ -387,12 +387,13 @@
 		align-items: center;
 	}
 	.histTwo h4{
-		margin-bottom: 1px;
+		margin-bottom: 2px;
 		font-weight: 400;
 	}
 	
 	.histTwo p{
-		margin: 1px 0;
+		margin: 2px 0;
+		font-size: 14px;
 		color: #aaa;
 	}
 	.histThree{
