--- a/app.html
+++ b/app.html
@@ -373,6 +373,11 @@
 		margin-bottom: 10px;
 		color: rgba(0, 0, 0, 0.7);
 	}
+	.histDate{
+		background: #ccc;
+		padding: 5px;
+		margin: 5px 0; 
+	} 
 	.histHead{
 		display: grid;
 		grid-template-columns: 1.5fr 5.5fr 4fr;
@@ -401,7 +406,7 @@
 		text-align: center;
 	}
 	.histThree h4{
-		margin-bottom: 7px;
+		margin-bottom: 5px;
 	}	
 	.status{
 		display: inline-flex;
@@ -619,6 +624,10 @@
 				</div>
 
 				<div class="history">
+				<div class="histDate">
+					<p>Nov 2025</p> 
+				</div>
+					
 				<div class="histHead">
 					<div class="histOne">
 						<i class="fa fa-exchange" aria-hidden="true"></i>
