--- a/app.html
+++ b/app.html
@@ -367,16 +367,16 @@
 	.historySep{
 		margin-top: 40px;
 	}
+	.histDate{
+		background: #ccc;
+		padding: 2px;
+		margin: 5px 0; 
+	}
 	.history{
 		border: 1px solid #ccc;
 		border-radius: 10px;
 		margin-bottom: 10px;
 		color: rgba(0, 0, 0, 0.7);
-	}
-	.histDate{
-		background: #ccc;
-		padding: 5px;
-		margin: 5px 0; 
 	} 
 	.histHead{
 		display: grid;
@@ -392,12 +392,11 @@
 		align-items: center;
 	}
 	.histTwo h4{
-		margin-bottom: 2px;
 		font-weight: 400;
 	}
 	
 	.histTwo p{
-		margin: 2px 0;
+		margin-top: 4px;
 		font-size: 14px;
 		color: #aaa;
 	}
@@ -593,6 +592,11 @@
 
 			<div class="historySep">
 				<h4>History</h4>
+		
+				<div class="histDate">
+					<p>Nov 2025</p> 
+				</div>
+				
 				<div class="history">
 				<div class="histHead">
 					<div class="histOne">
@@ -624,10 +628,6 @@
 				</div>
 
 				<div class="history">
-				<div class="histDate">
-					<p>Nov 2025</p> 
-				</div>
-					
 				<div class="histHead">
 					<div class="histOne">
 						<i class="fa fa-exchange" aria-hidden="true"></i>
