--- a/app.html
+++ b/app.html
@@ -372,6 +372,9 @@
 		padding: 2px;
 		margin: 5px 0; 
 	}
+	.histDate p{
+		font-size: 14px;
+	}
 	.history{
 		border: 1px solid #ccc;
 		border-radius: 10px;
