--- a/app.html
+++ b/app.html
@@ -368,12 +368,13 @@
 		margin-top: 40px;
 	}
 	.histDate{
-		background: #ccc;
-		padding: 2px;
-		margin: 5px 0; 
+		background: rgba(3, 3, 3, 0.5);
+		padding: 5px;
+		margin-bottom: 10px; 
 	}
 	.histDate p{
 		font-size: 14px;
+		margin: 0;
 	}
 	.history{
 		border: 1px solid #ccc;
