--- a/app.html
+++ b/app.html
@@ -368,8 +368,9 @@
 		margin-top: 40px;
 	}
 	.histDate{
-		background: rgba(3, 3, 3, 0.5);
-		padding: 5px;
+		background: rgba(3, 3, 3, 0.2);
+		padding: 10px;
+		border-radius: 5px;
 		margin-bottom: 10px; 
 	}
 	.histDate p{
