--- a/app.html
+++ b/app.html
@@ -368,7 +368,7 @@
 		margin-top: 40px;
 	}
 	.histDate{
-		background: rgba(3, 3, 3, 0.1);
+		background: rgba(3, 3, 3, 0.05);
 		padding: 10px;
 		border-radius: 5px;
 		margin-bottom: 10px; 
@@ -401,7 +401,7 @@
 	}
 	
 	.histTwo p{
-		margin-top: 2px;
+		margin: 0 2px;
 		font-size: 14px;
 		color: #aaa;
 	}
