--- a/app.html
+++ b/app.html
@@ -398,12 +398,13 @@
 	}
 	.histTwo h4{
 		font-weight: 400;
+		margin-bottom: 2px;
 	}
 	
 	.histTwo p{
 		margin: 2px 0;
 		font-size: 14px;
-		color: #aaa;
+		color: rgba(3, 3, 3, 0.1);
 	}
 	.histThree{
 		position: relative;
@@ -441,7 +442,7 @@
 	.histFive{
 	}
 	.histFive p{
-		color: #aaa;
+		color: rgba(3, 3, 3, 0.1);
 		font-size: 14px;
 	}
 	.histFive i{
@@ -458,7 +459,7 @@
 	}
 	.histSix p{
 		font-size: 14px;
-		color: #aaa;
+		color: rgba(3, 3, 3, 0.1);
 	}
 	
   </style>
