--- a/app.html
+++ b/app.html
@@ -453,6 +453,7 @@
 	.histFive span{
 		background: #bbb;
 		font-weight: bold;
+		text-align: right;
 		color: #fff;
 		padding: 1px 6px;
 		font-size: 14px;
