--- a/app.html
+++ b/app.html
@@ -398,6 +398,7 @@
 		border: 1px solid red;
 	}
 	.histTwo h4{
+		margin-top: 15px;
 		font-weight: 400;
 		margin-bottom: 5px;
 	}
@@ -412,6 +413,7 @@
 		text-align: center;
 	}
 	.histThree h4{
+		margin-top: 15px;
 		margin-bottom: 5px;
 	}	
 	.status{
