--- a/app.html
+++ b/app.html
@@ -613,7 +613,7 @@
 					</div>
 					<div class="histTwo">
 						<h4>Deposit</h4>
-						<p>18 Dec, 14:49</p>
+						<p>3 Nov, 16:49</p>
 						<p>Invoice ID 2038718845</p>
 					</div>
 					<div class="histThree">
@@ -642,8 +642,8 @@
 						<i class="fa fa-exchange" aria-hidden="true"></i>
 					</div>
 					<div class="histTwo">
-						<h4>Deposit</h4>
-						<p>18 Dec, 14:49</p>
+						<h4>Transfer</h4>
+						<p>3 Nov, 14:49</p>
 						<p>Invoice ID 2038718845</p>
 					</div>
 					<div class="histThree">
