--- a/app.html
+++ b/app.html
@@ -464,7 +464,14 @@
 		font-size: 14px;
 		color: rgba(3, 3, 3, 0.5);
 	}
-	
+	.rejectedIcon i{
+	}
+	.rejectedState{
+	}
+	.rejected{
+		margin-bottom: 0;
+		background: pink;
+	}
   </style>
 </head>
   <body>
@@ -647,7 +654,7 @@
 						<p>Invoice ID 2038718845</p>
 					</div>
 					<div class="histThree">
-						<h4>+ 20 000.00 NGN</h4>
+						<h4>10.00 USD</h4>
 						<div class="status">
 							<i class="fa fa-circle" aria-hidden="true"></i><p>Done</p>
 						</div>
@@ -662,6 +669,39 @@
 					</div>
 					<div class="histSix">
 						<p>131734923</p>
+					</div>
+				</div>	
+				</div>
+
+				<div class="history">
+				<div class="histHead">
+					<div class="histOne rejectedIcon">
+						<i class="fa fa-exchange" aria-hidden="true"></i>
+					</div>
+					<div class="histTwo">
+						<h4>Deposit</h4>
+						<p>1 Nov, 09:20</p>
+						<p>Invoice ID 2038718845</p>
+					</div>
+					<div class="histThree">
+						<h4>+ 20 000.00 NGN</h4>
+						<div class="status rejectedState">
+							<i class="fa fa-circle" aria-hidden="true"></i><p>Rejected</p>
+						</div>
+					</div>
+				</div>
+				<div class="histBottom">
+					<div class="histFour">
+						<i class="fa fa-television" aria-hidden="true"></i>	
+					</div>
+					<div class="histFive">
+						<p>Online Bank Tra...<i class="fa fa-long-arrow-right" aria-hidden="true"></i><span>ex</span></p>
+					</div>
+					<div class="histSix">
+						<p>131734923</p>
+					</div>
+					<div class="rejected">
+						Transaction timed out. Please try again later or use another payment method.
 					</div>
 				</div>	
 				</div>
