--- a/app.html
+++ b/app.html
@@ -471,6 +471,8 @@
 	.rejected{
 		margin-bottom: 0;
 		background: pink;
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
 	}
   </style>
 </head>
@@ -676,7 +678,7 @@
 				<div class="history">
 				<div class="histHead">
 					<div class="histOne rejectedIcon">
-						<i class="fa fa-exchange" aria-hidden="true"></i>
+						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
 					</div>
 					<div class="histTwo">
 						<h4>Deposit</h4>
