--- a/app.html
+++ b/app.html
@@ -465,14 +465,14 @@
 		color: rgba(3, 3, 3, 0.5);
 	}
 	.rejectedIcon i{
-		color: rgba(222, 49, 66, 0.5);
+		color: rgba(222, 49, 66, 0.8);
 	}
 	.rejectedState{
-		color: rgba(222, 49, 66, 0.05);
+		background: rgba(222, 49, 66, 0.05);
 	}
 	.rejected{
 		margin-bottom: 0;
-		color: rgba(222, 49, 66, 0.05);
+		background: rgba(222, 49, 66, 0.05);
 		border-bottom-left-radius: 10px;
 		border-bottom-right-radius: 10px;
 	}
