--- a/app.html
+++ b/app.html
@@ -465,14 +465,17 @@
 		color: rgba(3, 3, 3, 0.5);
 	}
 	.rejectedIcon i{
-		color: rgba(222, 49, 66, 0.8);
+		color: rgba(222, 49, 66, 0.7);
 	}
 	.rejectedState{
-		background: rgba(222, 49, 66, 0.05);
+		background: rgba(222, 49, 66, 0.1);
 	}
+	.rejectedState i{
+		color: rgba(222, 49, 66, 0.7);
+	} 
 	.rejected{
 		margin-bottom: 0;
-		background: rgba(222, 49, 66, 0.05);
+		background: rgba(222, 49, 66, 0.1);
 		border-bottom-left-radius: 10px;
 		border-bottom-right-radius: 10px;
 	}
