--- a/app.html
+++ b/app.html
@@ -476,6 +476,7 @@
 		background: rgba(222, 49, 66, 0.1);
 		border-bottom-left-radius: 10px;
 		border-bottom-right-radius: 10px;
+		border: 1px solid rgba(222, 49, 66, 0.8);
 	}
   </style>
 </head>
