--- a/app.html
+++ b/app.html
@@ -473,6 +473,7 @@
 	} 
 	.rejected{
 		margin-bottom: 0;
+		padding: 10px;
 		background: rgba(222, 49, 66, 0.1);
 		border-bottom-left-radius: 10px;
 		border-bottom-right-radius: 10px;
