--- a/app.html
+++ b/app.html
@@ -421,6 +421,7 @@
 		padding: 2px 10px;
 		border-radius: 15px;
 		align-items: center;
+		color: #008000;
 	}
 	.status i{
 		font-size: 8px;
@@ -473,11 +474,11 @@
 	} 
 	.rejected{
 		margin-bottom: 0;
-		padding: 10px;
+		padding: 20px;
 		background: rgba(222, 49, 66, 0.1);
 		border-bottom-left-radius: 10px;
 		border-bottom-right-radius: 10px;
-		border: 1px solid rgba(222, 49, 66, 0.3);
+		border: 1px solid rgba(222, 49, 66, 0.2);
 	}
   </style>
 </head>
