--- a/app.html
+++ b/app.html
@@ -720,6 +720,40 @@
 					</div>
 				</div>
 				
+				<!-- Failed two -->
+				<div class="history">
+				<div class="histHead">
+					<div class="histOne rejectedIcon">
+						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+					</div>
+					<div class="histTwo">
+						<h4>Deposit</h4>
+						<p>1 Nov, 09:20</p>
+						<p>Invoice ID 2038718845</p>
+					</div>
+					<div class="histThree">
+						<h4>+ 20 000.00 NGN</h4>
+						<div class="status rejectedState">
+							<i class="fa fa-circle" aria-hidden="true"></i><p>Rejected</p>
+						</div>
+					</div>
+				</div>
+				<div class="histBottom">
+					<div class="histFour">
+						<i class="fa fa-television" aria-hidden="true"></i>	
+					</div>
+					<div class="histFive">
+						<p>Online Bank Tra...<i class="fa fa-long-arrow-right" aria-hidden="true"></i><span>ex</span></p>
+					</div>
+					<div class="histSix">
+						<p>131734923</p>
+					</div>
+				</div>
+					<div class="rejected">
+						Temporary bank processing error. Please try again later or use another payment method. If the issue persists, kindly contact your bank.
+					</div>
+				</div>
+				
           </div>
         </div>
 	  </div>
