--- a/app.html
+++ b/app.html
@@ -476,6 +476,7 @@
 	} 
 	.rejected{
 		margin-bottom: 0;
+		font-size: 14px;
 		padding: 20px;
 		background: rgba(222, 49, 66, 0.1);
 		border-bottom-left-radius: 10px;
