--- a/app.html
+++ b/app.html
@@ -754,6 +754,37 @@
 						Temporary bank processing error. Please try again later or use another payment method. If the issue persists, kindly contact your bank.
 					</div>
 				</div>
+
+				<!-- Withdraw -->
+				<div class="history">
+				<div class="histHead">
+					<div class="histOne">
+						<i class="fa fa-paper-plane" aria-hidden="true"></i>
+					</div>
+					<div class="histTwo">
+						<h4>Withdraw</h4>
+						<p>3 Nov, 16:49</p>
+						<p>Invoice ID 2038718845</p>
+					</div>
+					<div class="histThree">
+						<h4>- 1 000.00 USD</h4>
+						<div class="status">
+							<i class="fa fa-circle" aria-hidden="true"></i><p>Sent</p>
+						</div>
+					</div>
+				</div>
+				<div class="histBottom">
+					<div class="histFour">
+						<i class="fa fa-television" aria-hidden="true"></i>
+					</div>
+					<div class="histFive">
+						<p>Online Bank Tra...<i class="fa fa-long-arrow-right" aria-hidden="true"></i><span>ex</span></p>
+					</div>
+					<div class="histSix">
+						<p>131734923</p>
+					</div>
+				</div>
+				</div>
 				
           </div>
         </div>
