--- a/app.html
+++ b/app.html
@@ -445,6 +445,8 @@
 		font-size: 10px;
 	}
 	.histFive{
+		display: flex;
+		justify-content: space-between;
 		border: 1px solid red;
 	}
 	.histFive p{
@@ -452,7 +454,7 @@
 		font-size: 14px;
 	}
 	.histFive i{
-		margin: 0 10px;
+		margin: 0;
 		color: #bbb;
 	}
 	.histFive span{
