--- a/app.html
+++ b/app.html
@@ -651,7 +651,9 @@
 						<i class="fa fa-television" aria-hidden="true"></i>
 					</div>
 					<div class="histFive">
-						<p>Online Bank Tra...<i class="fa fa-long-arrow-right" aria-hidden="true"></i><span>ex</span></p>
+						<p>Online Bank Tra...</p>
+						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+						<p><span>ex</span></p>
 					</div>
 					<div class="histSix">
 						<p>131734923</p>
