--- a/app.html
+++ b/app.html
@@ -786,12 +786,12 @@
 				</div>
 				<div class="histBottom">
 					<div class="histFour">
-						<i class="fa fa-television" aria-hidden="true"></i>
+						<p><span>ex</span></p>
 					</div>
-					<div class="histFive">
+					<div class="histFive withdraw">
 						<p>Online Bank Tra...</p>
 						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						<p><span>ex</span></p>
+						<i class="fa fa-television" aria-hidden="true"></i>
 					</div>
 					<div class="histSix">
 						<p>131734923</p>
