--- a/app.html
+++ b/app.html
@@ -436,13 +436,23 @@
 		display: grid;
 		grid-template-columns: 1.5fr 5.5fr 4fr;
 	}
-	.histFour{
+	.histFour, .withdraw{
 		border-radius: 50%;
 		background: #ccc;
 		padding: 5px;
 		margin: auto;
 		color: #fff;
 		font-size: 10px;
+	}
+	.histFour span{
+		background: #bbb;
+		font-weight: bold;
+		text-align: center;
+		align-items: center;
+		color: #fff;
+		padding: 1px 6px;
+		font-size: 14px;
+		font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	}
 	.histFive{
 		display: flex;
@@ -788,10 +798,12 @@
 					<div class="histFour">
 						<p><span>ex</span></p>
 					</div>
-					<div class="histFive withdraw">
+					<div class="histFive">
 						<p>Online Bank Tra...</p>
 						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						<i class="fa fa-television" aria-hidden="true"></i>
+						<div class=withdraw">
+							<i class="fa fa-television" aria-hidden="true"></i>
+						</div>
 					</div>
 					<div class="histSix">
 						<p>131734923</p>
