--- a/app.html
+++ b/app.html
@@ -436,13 +436,18 @@
 		display: grid;
 		grid-template-columns: 1.5fr 5.5fr 4fr;
 	}
-	.histFour, .withdraw{
+	.histFour{
 		border-radius: 50%;
 		background: #ccc;
 		padding: 5px;
 		margin: auto;
 		color: #fff;
 		font-size: 10px;
+	}
+	.withdraw{
+		padding: 5px;
+		margin: auto;
+		color: #fff;
 	}
 	.histFour span{
 		background: #bbb;
