Remove border-radius and set background to transparent

--- a/app.html
+++ b/app.html
@@ -445,6 +445,8 @@
 		font-size: 10px;
 	}
 	.withdraw{
+		border-radius: 0;
+		background: transparent;
 		padding: 5px;
 		margin: auto;
 		color: #fff;
