--- a/app.html
+++ b/app.html
@@ -436,20 +436,13 @@
 		display: grid;
 		grid-template-columns: 1.5fr 5.5fr 4fr;
 	}
-	.histFour{
+	.histFour, .withdraw i{
 		border-radius: 50%;
 		background: #ccc;
 		padding: 5px;
 		margin: auto;
 		color: #fff;
 		font-size: 10px;
-	}
-	.withdraw{
-		border-radius: 0;
-		background: transparent;
-		padding: 5px;
-		margin: auto;
-		color: #fff;
 	}
 	.histFour span{
 		background: #bbb;
