--- a/app.html
+++ b/app.html
@@ -436,7 +436,7 @@
 		display: grid;
 		grid-template-columns: 1.5fr 5.5fr 4fr;
 	}
-	.histFour, .withdraw i{
+	.histFour{
 		border-radius: 50%;
 		background: #ccc;
 		padding: 5px;
@@ -466,6 +466,14 @@
 	.histFive i{
 		margin: auto;
 		color: #bbb;
+	}
+	.withdraw i{
+		border-radius: 50%;
+		background: #ccc;
+		padding: 5px;
+		margin: auto;
+		color: #fff;
+		font-size: 10px;
 	}
 	.histFive span{
 		background: #bbb;
