Fix typo in class attribute for withdraw div

--- a/app.html
+++ b/app.html
@@ -809,7 +809,7 @@
 					<div class="histFive">
 						<p>Online Bank Tra...</p>
 						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						<div class=withdraw">
+						<div class="withdraw">
 							<i class="fa fa-television" aria-hidden="true"></i>
 						</div>
 					</div>
