Change text color for withdraw icon

--- a/app.html
+++ b/app.html
@@ -472,8 +472,10 @@
 		background: #ccc;
 		padding: 5px;
 		margin: auto;
-		color: #fff;
 		font-size: 10px;
+	}
+	.withdraw i{
+		color: #fff;
 	}
 	.histFive span{
 		background: #bbb;
