--- a/app.html
+++ b/app.html
@@ -444,6 +444,9 @@
 		color: #fff;
 		font-size: 10px;
 	}
+	.cleanBack{
+		background: transparent;
+	}
 	.histFour span{
 		background: #bbb;
 		font-weight: bold;
@@ -805,18 +808,18 @@
 					</div>
 				</div>
 				<div class="histBottom">
-					<div class="histFour">
+					<div class="histFour cleanBack">
 						<p><span>ex</span></p>
 					</div>
 					<div class="histFive">
-						<p>Online Bank Tra...</p>
+						<p>131734923</p>
 						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 						<div class="withdraw">
 							<i class="fa fa-television" aria-hidden="true"></i>
 						</div>
 					</div>
 					<div class="histSix">
-						<p>131734923</p>
+						<p>Online Bank Tra...</p>
 					</div>
 				</div>
 				</div>
