--- a/app.html
+++ b/app.html
@@ -819,7 +819,7 @@
 						</div>
 					</div>
 					<div class="histSix">
-						<p>Online Bank Tra...</p>
+						<p>Online Bank</p>
 					</div>
 				</div>
 				</div>
@@ -843,16 +843,18 @@
 					</div>
 				</div>
 				<div class="histBottom">
-					<div class="histFour">
-						<i class="fa fa-television" aria-hidden="true"></i>
-					</div>
-					<div class="histFive">
-						<p>Online Bank Tra...</p>
-						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+					<div class="histFour cleanBack">
 						<p><span>ex</span></p>
 					</div>
-					<div class="histSix">
+					<div class="histFive">
 						<p>131734923</p>
+						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+						<div class="withdraw">
+							<i class="fa fa-television" aria-hidden="true"></i>
+						</div>
+					</div>
+					<div class="histSix">
+						<p>Online Bank</p>
 					</div>
 				</div>
 				</div>
