--- a/app.html
+++ b/app.html
@@ -702,11 +702,11 @@
 					</div>
 				</div>
 				<div class="histBottom">
-					<div class="histFour">
-						<i class="fa fa-television" aria-hidden="true"></i>	
+					<div class="histFour cleanBack">
+						<p><span>ex</span></p>
 					</div>
 					<div class="histFive">
-						<p>Online Bank Tra...</p>
+						<p>173725923</p>
 						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 						<p><span>ex</span></p>
 					</div>
