Update invoice amount from 10.00 to 50.00 USD

--- a/app.html
+++ b/app.html
@@ -695,7 +695,7 @@
 						<p>Invoice ID 2038718845</p>
 					</div>
 					<div class="histThree">
-						<h4>+ 10.00 USD</h4>
+						<h4>50.00 USD</h4>
 						<div class="status">
 							<i class="fa fa-circle" aria-hidden="true"></i><p>Done</p>
 						</div>
