--- a/app.html
+++ b/app.html
@@ -682,8 +682,8 @@
 					</div>
 				</div>
 				</div>
-				
-				<!-- Transfer -->
+
+				<!-- Transfer out-->
 				<div class="history">
 				<div class="histHead">
 					<div class="histOne">
@@ -696,6 +696,39 @@
 					</div>
 					<div class="histThree">
 						<h4>50.00 USD</h4>
+						<div class="status">
+							<i class="fa fa-circle" aria-hidden="true"></i><p>Sent</p>
+						</div>
+					</div>
+				</div>
+				<div class="histBottom">
+					<div class="histFour cleanBack">
+						<p><span>ex</span></p>
+					</div>
+					<div class="histFive">
+						<p>131734923</p>
+						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+						<p><span>ex</span></p>
+					</div>
+					<div class="histSix">
+						<p>173725939</p>
+					</div>
+				</div>	
+				</div>
+				
+				<!-- Transfer in-->
+				<div class="history">
+				<div class="histHead">
+					<div class="histOne">
+						<i class="fa fa-exchange" aria-hidden="true"></i>
+					</div>
+					<div class="histTwo">
+						<h4>Transfer</h4>
+						<p>3 Nov, 14:49</p>
+						<p>Invoice ID 2038718845</p>
+					</div>
+					<div class="histThree">
+						<h4>+ 50.00 USD</h4>
 						<div class="status">
 							<i class="fa fa-circle" aria-hidden="true"></i><p>Done</p>
 						</div>
