Add date sections for October and September 2025

--- a/app.html
+++ b/app.html
@@ -715,6 +715,11 @@
 					</div>
 				</div>	
 				</div>
+
+				<!-- Date -->
+				<div class="histDate">
+					<p>Oct 2025</p> 
+				</div>
 				
 				<!-- Transfer in-->
 				<div class="history">
@@ -783,6 +788,11 @@
 					<div class="rejected">
 						Transaction timed out. Please try again later or use another payment method.
 					</div>
+				</div>
+
+				<!-- Date -->
+				<div class="histDate">
+					<p>Sep 2025</p> 
 				</div>
 				
 				<!-- Failed two -->
