--- a/app.html
+++ b/app.html
@@ -585,7 +585,7 @@
         </div>
 
         <div class="modalBody">
-			<p class="pahe">Payment Method</p>
+			<p class="pahe">Payment method</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" id="employ" readonly>
 				<div class="arrow">▼</div>
@@ -605,7 +605,7 @@
 				</ul>
 			</div>
 
-			<p class="pahe">Payment Method</p>
+			<p class="pahe">Bank transfer option</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" id="employ" readonly>
 				<div class="arrow">▼</div>
@@ -617,7 +617,7 @@
 				</ul>
 			</div>
 
-			<p class="pahe">Payment Method</p>
+			<p class="pahe">To account</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" readonly>
 				<div class="arrow noFlip"><p>$23,473.04</p>▼</div>
