--- a/app.html
+++ b/app.html
@@ -610,8 +610,8 @@
 				<input type="text" class="datalistInput" id="employ" readonly>
 				<div class="arrow">▼</div>
 				<ul class="options">
-					<div class="firstLi"><li data-value="Self-Employed"><i class="fa fa-television" aria-hidden="true"></i>Online Bank Transfer</li></div>
-					<li data-value="Student"><i class="fa fa-television" aria-hidden="true"></i>Online Bank Transfer #2</li>
+					<div class="firstLi"><li data-value="Employed">Online Bank Transfer</li></div>
+					<li data-value="Student">Online Bank Transfer #2</li>
 				</ul>
 			</div>
 
