--- a/app.html
+++ b/app.html
@@ -590,10 +590,10 @@
 				<input type="text" class="datalistInput" id="employ" readonly>
 				<div class="arrow">▼</div>
 				<ul class="options">
-					<div class="firstLi"><li data-value="Self-Employed">MT5:   592631072</li></div>
-					<li data-value="Student">Student</li>
-					<li data-value="Employed">Employed</li>
-					<li data-value="Unemployed">Unemployed</li>
+					<div class="firstLi"><li data-value="Self-Employed">1239131644, Access Bank</li></div>
+					<li data-value="Student">Bank Card</li>
+					<li data-value="Employed">Bitcoin (BTC)</li>
+					<li data-value="Unemployed">Ethereum (ETH)</li>
 				</ul>
 			</div>
 			  
