--- a/app.html
+++ b/app.html
@@ -301,9 +301,8 @@
 		left: 0;
 		right: 0;
 		background: white;
-		border: 1px solid #ccc;
-		border-top: none;
-		border-radius: 0 0 4px 4px;
+		border-shadow: 5px 5px 8px rgba(0, 0, 0, 0.15);
+		border-radius: 0 0 10px 10px;
 		max-height: 150px;
 		overflow-y: auto;
 		list-style: none;
@@ -317,6 +316,9 @@
 		cursor: pointer;
 	}
 	.options li:hover {
+		background-color: #f0f0f0;
+	}
+	.firstLi li {
 		background-color: #f0f0f0;
 	}
 	.note{
