--- a/app.html
+++ b/app.html
@@ -903,6 +903,51 @@
           </div>
         </div>
 	  </div>
+		
+      <div id="withdraw" class="modal active">
+        <div class="xclose">
+          <button onclick="closeModal('withdraw')">&times;</button>
+        </div>
+        
+        <div class="modalTitle">
+          <h3>Deposit</h3>
+        </div>
+
+        <div class="modalBody">
+				<!-- Deposit -->
+				<div class="history">
+				<div class="histHead">
+					<div class="histOne">
+						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+					</div>
+					<div class="histTwo">
+						<h4>Deposit</h4>
+						<p>3 Nov, 16:49</p>
+						<p>Invoice ID 2038718845</p>
+					</div>
+					<div class="histThree">
+						<h4>+ 20 000.00 NGN</h4>
+						<div class="status">
+							<i class="fa fa-circle" aria-hidden="true"></i><p>Done</p>
+						</div>
+					</div>
+				</div>
+				<div class="histBottom">
+					<div class="histFour">
+						<i class="fa fa-television" aria-hidden="true"></i>
+					</div>
+					<div class="histFive">
+						<p>Online Bank Tra...</p>
+						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+						<p><span>ex</span></p>
+					</div>
+					<div class="histSix">
+						<p>131734923</p>
+					</div>
+				</div>
+				</div>
+        </div>
+	  </div>
 	</div>
     <script src="sw.js"></script>
   </body>
