--- a/app.html
+++ b/app.html
@@ -545,7 +545,7 @@
         <div class="dashButtons">      
           <button><div class="icon home"><i class="fa fa-area-chart" aria-hidden="true"></i></div>Trade</button>
           <button onclick="openModal('deposit')"><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
-          <button><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
+          <button onclick="openModal('withdraw')"><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
         </div>
       </div>
@@ -575,7 +575,8 @@
         <button class="bottomBtn"><i class="fa fa-heartbeat" aria-hidden="true"></i>Performance</button>     
         <button class="bottomBtn"><i class="fa fa-user" aria-hidden="true"></i>Profile</button>
       </div>
-      
+
+		<!-- MAIN DEPOSIT -->
       <div id="deposit" class="modal">
         <div class="xclose">
           <button onclick="closeModal('deposit')">&times;</button>
@@ -903,18 +904,19 @@
           </div>
         </div>
 	  </div>
-		
-      <div id="withdraw" class="modal active">
+
+		<!-- MAIN WITHDRAW -->
+      <div id="withdraw" class="modal">
         <div class="xclose">
           <button onclick="closeModal('withdraw')">&times;</button>
         </div>
         
         <div class="modalTitle">
-          <h3>Deposit</h3>
+          <h3>Withdraw</h3>
         </div>
 
         <div class="modalBody">
-				<!-- Deposit -->
+				<!-- Withdraw -->
 				<div class="history">
 				<div class="histHead">
 					<div class="histOne">
