--- a/trade.html
+++ b/trade.html
@@ -339,7 +339,8 @@ function hideDropdown(select) {
 			button.classList.remove('colored');
 		}
 	});
-	
+
+	// Flip to header to top
         document.addEventListener('DOMContentLoaded', function() {
             const header = document.getElementById('flip');
             const fixedTop = document.querySelector('.top');
