--- a/trade.html
+++ b/trade.html
@@ -207,7 +207,7 @@
       </div>
 
       <div class="headDash">
-      <div id="flip" class="header">
+      <div id="jump" class="header">
 		  <h3>Accounts</h3>
 	  </div>
 
@@ -342,7 +342,7 @@ function hideDropdown(select) {
 
 	// Flip to header to top
         document.addEventListener('DOMContentLoaded', function() {
-            const header = document.getElementById('flip');
+            const header = document.getElementById('jump');
             const fixedTop = document.querySelector('.top');
             
             // Calculate when header should jump to fixed top
