--- a/performance.html
+++ b/performance.html
@@ -31,6 +31,7 @@
       width: 100%;
       margin: 10px 17px;
       text-align: right;
+      opacity: 0;
     }
     .top i{
       margin-left: 30px;
@@ -214,8 +215,10 @@
 
       <div class="body">
         <div class="tradesHead">
-          <h4>Open</h4>
+          <h4>All real accounts</h4>
+          <h4>Last 7 days</h4>
         </div>
+		  
         <div class="trades">
           <div class="tradesP">
             <h4>No open positions</h4>
