--- a/trade.html
+++ b/trade.html
@@ -207,11 +207,9 @@
       </div>
 
       <div class="headDash">
-      <div id="flip" class="header">
-		  <h3>Accounts</h3>
+      <div class="header">
+		  <h3>Trade</h3>
 	  </div>
-
-
 	  </div> 
 
       <div class="body">
