Add background color to header in trade.html

--- a/trade.html
+++ b/trade.html
@@ -63,6 +63,7 @@
 		padding: 10px 30px;
 		background: transparent;
 		z-index: 1001;
+		background: #fff;
 	}
 	.header.in-top h3{
 		font-size: 20px;
@@ -203,6 +204,9 @@
         <div class="topIcons">
           <i class="fa fa-clock" aria-hidden="true"></i>
         </div>
+		<div class="header in-top">
+			<p>real</p>
+		</div>
       </div>
 
       <div class="headDash">
