--- a/trade.html
+++ b/trade.html
@@ -65,10 +65,9 @@
 		z-index: 1001;
 		background: #fff;
 	}
-	.header.in-top h3{
-		font-size: 20px;
-		font-weight: 900;
-		margin-bottom: 0;
+	.header.in-top p{
+		font-size: 16px;
+		margin: 0;
 	}
     .dashboard{
       margin-top: 10px;
