--- a/performance.html
+++ b/performance.html
@@ -233,10 +233,10 @@
       </div>
     
       <div class="bottom">
-        <button class="bottomBtn"><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>      
-        <button onclick="window.location.href='trade.html'" class="bottomBtn active"><i class="fa fa-area-chart" aria-hidden="true"></i>Trade</button>
+        <button onclick="window.location.href='app.html'" class="bottomBtn"><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>      
+        <button onclick="window.location.href='trade.html'" class="bottomBtn"><i class="fa fa-area-chart" aria-hidden="true"></i>Trade</button>
         <button class="bottomBtn"><i class="fa fa-globe" aria-hidden="true"></i>Insights</button>
-        <button class="bottomBtn"><i class="fa fa-heartbeat" aria-hidden="true"></i>Performance</button>     
+        <button class="bottomBtn active"><i class="fa fa-heartbeat" aria-hidden="true"></i>Performance</button>     
         <button class="bottomBtn"><i class="fa fa-user" aria-hidden="true"></i>Profile</button>
       </div>
 	</div>
