--- a/trade.html
+++ b/trade.html
@@ -69,79 +69,14 @@
 		font-size: 16px;
 		margin: 0;
 	}
-    .dashboard{
-      margin-top: 10px;
-      padding: 15px;
-      background: #fff;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 8px 20px rgba(0,0,0,0.15);
-      border-radius: 15px;
-    }
-    .userDetails{
-      display: flex;
-      align-items: center;
-      position: relative;
-      padding: 0;
-    }
-    .userDetails p{
-      font-size: 12px;
-      font-weight: bold;
-    }
-    #user{
-      color: rgba(0,0,0,0.5);
-      font-size: 10px;
-      font-weight: 600;
-      margin-left: 5px;
-    }
-    .userDetails i{
-      position: absolute;
-      right: 5%;
-      border-radius: 50%;
-      background: #f2f2f3;
-      padding: 10px;
-    }
-    .userInfo{
-      display: flex;
-      padding: 0;
-    }
-    .userInfo p{
-      margin: 0px 5px 0px;
-      font-size: 10px;
-      background: #f2f2f3;
-      padding: 5px; 
-      border-radius: 10px;
-    }
-    .userBalance{
-      font-size: 22px;
-      padding-left: 5px;
-      font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    }
-	.userBalance h4{
-      margin: 15px 0;
-      font-weight: 600;
+	.header.in-top h4{
+		font-size: 16px;
+		margin: 0;
+	} 
+	.header.in-top i{
+		font-size: 18px;
+		margin: auto;
 	}
-    .dashButtons{
-      display: flex;
-      justify-content: space-between;
-    }
-    .dashButtons button{
-      background: transparent;
-      color: #000;
-    }
-    .icon{
-      background: #f2f2f3;
-      height: 50px;
-      width: 50px;
-      border-radius: 50%;
-      align-items: center;
-    }
-    .home{
-      background: #83f28f;
-    }
-    .dashButtons i{
-      font-size: 18px;
-      position: relative;
-      top: 30%;
-    }
     .body{
       margin: 50px 15px;
     }
