--- a/trade.html
+++ b/trade.html
@@ -64,6 +64,7 @@
 		background: transparent;
 		z-index: 1001;
 		background: #fff;
+		border: 1px solid #ccc;
 	}
 	.header.in-top p{
 		font-size: 16px;
