--- a/trade.html
+++ b/trade.html
@@ -141,6 +141,8 @@
         </div>
 		<div class="header in-top">
 			<p>real</p>
+			<h4>23,302.24</h4>
+			<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
 		</div>
       </div>
 
