--- a/trade.html
+++ b/trade.html
@@ -65,6 +65,7 @@
 		z-index: 1001;
 		background: #fff;
 		border: 1px solid #ccc;
+		border-radius: 50%;
 	}
 	.header.in-top p{
 		font-size: 16px;
