--- a/trade.html
+++ b/trade.html
@@ -66,6 +66,7 @@
 		background: #fff;
 		border: 1px solid #ccc;
 		border-radius: 50%;
+		display: flex;
 	}
 	.header.in-top p{
 		font-size: 16px;
@@ -141,7 +142,7 @@
           <i class="fa fa-clock" aria-hidden="true"></i>
         </div>
 		<div class="header in-top">
-			<p>real</p>
+			<p>Real</p>
 			<h4>23,302.24</h4>
 			<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
 		</div>
