--- a/trade.html
+++ b/trade.html
@@ -65,7 +65,7 @@
 		z-index: 1001;
 		background: #fff;
 		border: 1px solid #ccc;
-		border-radius: 50%;
+		border-radius: 20px;
 		display: flex;
 	}
 	.header.in-top p{
