--- a/trade.html
+++ b/trade.html
@@ -67,6 +67,7 @@
 		border: 1px solid #ccc;
 		border-radius: 20px;
 		display: flex;
+		justify-content: space-between;
 	}
 	.header.in-top p{
 		font-size: 16px;
@@ -77,7 +78,7 @@
 		margin: 0;
 	} 
 	.header.in-top i{
-		font-size: 18px;
+		font-size: 22px;
 		margin: auto;
 	}
     .body{
