--- a/trade.html
+++ b/trade.html
@@ -67,19 +67,19 @@
 		border: 1px solid #ccc;
 		border-radius: 20px;
 		display: flex;
-		justify-content: space-between;
+		align-items: center;
 	}
 	.header.in-top p{
 		font-size: 16px;
-		margin: 0;
+		margin: 2px 0;
 	}
 	.header.in-top h4{
 		font-size: 16px;
-		margin: 0;
+		margin: 2px 0;
 	} 
 	.header.in-top i{
 		font-size: 22px;
-		margin: auto;
+		margin: 2px 0;
 	}
     .body{
       margin: 50px 15px;
