--- a/trade.html
+++ b/trade.html
@@ -71,15 +71,15 @@
 	}
 	.header.in-top p{
 		font-size: 16px;
-		margin: 2px 0;
+		margin: 0;
 	}
 	.header.in-top h4{
 		font-size: 16px;
-		margin: 2px 0;
+		margin: 5px 0;
 	} 
 	.header.in-top i{
 		font-size: 22px;
-		margin: 2px 0;
+		margin: 0;
 	}
     .body{
       margin: 50px 15px;
