--- a/trade.html
+++ b/trade.html
@@ -58,7 +58,7 @@
 		top: 0;
 		left: 50%;
 		transform: translateX(-50%);
-		width: auto;
+		width: 30%;
 		margin-top: 0;
 		padding: 5px 15px;
 		background: transparent;
@@ -68,9 +68,10 @@
 		border-radius: 20px;
 		display: flex;
 		align-items: center;
+		justify-content: space-between;
 	}
 	.header.in-top p{
-		font-size: 16px;
+		font-size: 14px;
 		margin: 0;
 	}
 	.header.in-top h4{
