--- a/trade.html
+++ b/trade.html
@@ -145,7 +145,7 @@
         </div>
 		<div class="header in-top">
 			<p>Real</p>
-			<h4>23,302.24</h4>
+			<h4>23,302.24 USD</h4>
 			<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
 		</div>
       </div>
