--- a/trade.html
+++ b/trade.html
@@ -158,7 +158,7 @@
 
       <div class="body">
         <div class="tradesHead">
-          <h4>Open</h4>
+          <button><h4>Favorite</h4></button>
         </div>
         <div class="trades">
           <div class="tradesP">
