--- a/trade.html
+++ b/trade.html
@@ -89,7 +89,9 @@
       padding: 0px;
       border-bottom: 1px solid #ccc;
     }
-    .tradesHead h4{
+    .tradesHead button{
+      background: none;
+      color: #000;
       margin: 0;
       display: inline-block;
       padding-bottom: 10px;
@@ -158,7 +160,7 @@
 
       <div class="body">
         <div class="tradesHead">
-          <button><h4>Favorite</h4></button>
+          <button>Favorite</button>
         </div>
         <div class="trades">
           <div class="tradesP">
