--- a/trade.html
+++ b/trade.html
@@ -88,11 +88,14 @@
     .tradesHead{
       padding: 0px;
       border-bottom: 1px solid #ccc;
+      display: flex;
+      overflow-x: auto;
     }
     .tradesHead button{
       background: none;
       color: #000;
       margin: 0;
+      margin-left: 15px;
       display: inline-block;
       padding-bottom: 10px;
       font-size: 12px;
@@ -161,6 +164,10 @@
       <div class="body">
         <div class="tradesHead">
           <button>Favorite</button>
+          <button>Most Traded</button>
+          <button>Top Movers</button>
+          <button>Major currencies</button>
+          <button>Minor currencies</button>
         </div>
         <div class="trades">
           <div class="tradesP">
