--- a/trade.html
+++ b/trade.html
@@ -91,9 +91,14 @@
       display: flex;
       overflow-x: auto;
     }
+	  
+	.tradesHead::-webkit-scrollbar{
+		display: none
+	}
     .tradesHead button{
       background: none;
       color: #000;
+      width: 100%;
       margin: 0;
       margin-left: 15px;
       display: inline-block;
