--- a/trade.html
+++ b/trade.html
@@ -96,12 +96,11 @@
 		display: none
 	}
     .tradesHead button{
-      background: none;
+      background: transparent;
       color: #000;
-      width: 100%;
       margin: 0;
       margin-left: 15px;
-      display: inline-block;
+      display: block;
       padding-bottom: 10px;
       font-size: 12px;
       border-bottom: 1.5px solid #000;
