--- a/trade.html
+++ b/trade.html
@@ -90,6 +90,7 @@
       border-bottom: 1px solid #ccc;
       display: flex;
       overflow-x: auto;
+      justify-content: space-between;
     }
 	  
 	.tradesHead::-webkit-scrollbar{
@@ -99,8 +100,7 @@
       background: transparent;
       color: #000;
       margin: 0;
-      margin-left: 15px;
-      display: block;
+      width: 100%;
       padding-bottom: 10px;
       font-size: 12px;
       border-bottom: 1.5px solid #000;
