--- a/trade.html
+++ b/trade.html
@@ -91,6 +91,7 @@
       display: flex;
       overflow-x: auto;
       justify-content: space-between;
+      gap: 15px;
     }
 	  
 	.tradesHead::-webkit-scrollbar{
@@ -101,6 +102,7 @@
       color: #000;
       margin: 0;
       width: 100%;
+      white-space: nowrap;
       padding-bottom: 10px;
       font-size: 12px;
       border-bottom: 1.5px solid #000;
