--- a/trade.html
+++ b/trade.html
@@ -105,6 +105,7 @@
       white-space: nowrap;
       padding-bottom: 10px;
       font-size: 12px;
+      border: none;
       border-bottom: 1.5px solid #000;
     }
     .trades{
