--- a/trade.html
+++ b/trade.html
@@ -90,8 +90,6 @@
       border-bottom: 1px solid #ccc;
       display: flex;
       overflow-x: auto;
-      justify-content: space-between;
-      gap: 15px;
     }
 	  
 	.tradesHead::-webkit-scrollbar{
@@ -104,7 +102,8 @@
       width: 100%;
       white-space: nowrap;
       padding-bottom: 10px;
-      font-size: 12px;
+      padding-right: 15px;
+      font-size: 13px;
       border: none;
     }
     .tradesHead button.active{
