--- a/trade.html
+++ b/trade.html
@@ -103,6 +103,7 @@
       white-space: nowrap;
       padding-bottom: 10px;
       padding-right: 15px;
+      padding-left: 5px;
       font-size: 13px;
       border: none;
     }
