--- a/trade.html
+++ b/trade.html
@@ -173,7 +173,7 @@
 
       <div class="body">
         <div class="tradesHead">
-          <button class="active">Favorite</button>
+          <button class="active">Favorites</button>
           <button>Most Traded</button>
           <button>Top Movers</button>
           <button>Major currencies</button>
