--- a/trade.html
+++ b/trade.html
@@ -174,10 +174,10 @@
       <div class="body">
         <div class="tradesHead">
           <button class="active">Favorites</button>
-          <button onclick="this.classList.add('active')">Most Traded</button>
-          <button onclick="this.classList.add('active')">Top Movers</button>
-          <button onclick="this.classList.add('active')">Major currencies</button>
-          <button onclick="this.classList.add('active')">Minor currencies</button>
+          <button onclick="this.classList.toggle('active')">Most Traded</button>
+          <button onclick="this.classList.toggle('active')">Top Movers</button>
+          <button onclick="this.classList.toggle('active')">Major currencies</button>
+          <button onclick="this.classList.toggle('active')">Minor currencies</button>
         </div>
         <div class="trades">
           <div class="tradesP">
