--- a/trade.html
+++ b/trade.html
@@ -104,7 +104,8 @@
       padding-bottom: 10px;
       padding-right: 20px;
       padding-left: 10px;
-      font-size: 13px;
+      font-size: 12px;
+      font-weight: bold;
       border: none;
     }
     .tradesHead button.active{
