--- a/trade.html
+++ b/trade.html
@@ -112,6 +112,17 @@
       color: #000;
       border-bottom: 1.5px solid #000;
 	}
+	.preTrades{
+		display: flex;
+	}
+	.preFi{
+		background: ;
+		padding: 10px 5px
+		color: rgba(3, 3, 3, 0.4);
+	}
+	.preLa{
+		padding: 5px;
+	}
     .trades{
       text-align: center;
       margin-top: 80px;
@@ -180,6 +191,14 @@
           <button onclick="this.classList.toggle('active')">Major currencies</button>
           <button onclick="this.classList.toggle('active')">Minor currencies</button>
         </div>
+		<div class="preTrades">
+			<div class="preFi">
+				<p>Sorted Manually</p>
+			</div>
+			<div class="preLa">
+				<p>Edit</p>
+			</div>
+		</div>
         <div class="trades">
           <div class="tradesP">
             <h4>No open positions</h4>
