--- a/trade.html
+++ b/trade.html
@@ -116,11 +116,12 @@
 		display: flex;
 	}
 	.preFi{
-		background: ;
+		background: rgba(3, 3, 3, 0.05);
 		padding: 10px 5px
 		color: rgba(3, 3, 3, 0.4);
 	}
 	.preLa{
+		background: rgba(3, 3, 3, 0.1);
 		padding: 5px;
 	}
     .trades{
