--- a/trade.html
+++ b/trade.html
@@ -117,12 +117,15 @@
 	}
 	.preFi{
 		background: rgba(3, 3, 3, 0.05);
-		padding: 10px 5px
+		padding: 10px 5px;
 		color: rgba(3, 3, 3, 0.4);
 	}
 	.preLa{
-		background: rgba(3, 3, 3, 0.1);
+		background: rgba(3, 3, 3, 0.05);
 		padding: 5px;
+	}
+	.preFi p, .preLa p{
+		margin: 0;
 	}
     .trades{
       text-align: center;
