--- a/trade.html
+++ b/trade.html
@@ -117,15 +117,19 @@
 	}
 	.preFi{
 		background: rgba(3, 3, 3, 0.05);
-		padding: 10px 5px;
+		padding: 5px 15px;
 		color: rgba(3, 3, 3, 0.4);
+		margin-right: 10px;
+		border-radius: 10px;
 	}
 	.preLa{
 		background: rgba(3, 3, 3, 0.05);
 		padding: 5px;
+		border-radius: 15px;
 	}
 	.preFi p, .preLa p{
 		margin: 0;
+		font-size: 12px;
 	}
     .trades{
       text-align: center;
