--- a/trade.html
+++ b/trade.html
@@ -114,6 +114,7 @@
 	}
 	.preTrades{
 		display: flex;
+		margin: 10px;
 	}
 	.preFi{
 		background: rgba(3, 3, 3, 0.05);
@@ -125,28 +126,17 @@
 	.preLa{
 		background: rgba(3, 3, 3, 0.05);
 		padding: 5px;
-		border-radius: 15px;
+		border-radius: 10px;
 	}
 	.preFi p, .preLa p{
 		margin: 0;
 		font-size: 12px;
 	}
     .trades{
-      text-align: center;
-      margin-top: 80px;
+		text-align: center;
+		background: #fff;
     }
-    .tradesP{
-      font-size: 12px;
-    }
-    .tradesH{
-      background: #e6e3e2;
-      border-radius: 3px;
-      margin: 15px auto;
-    }
-    .tradesH h4{
-      margin: 0;
-      padding: 15px;
-    }
+    
     .bottom{
       display: flex;
       position: fixed;
@@ -211,13 +201,6 @@
           <div class="tradesP">
             <h4>No open positions</h4>
           </div>
-          <div class="tradesH">
-            <h4>XAU/USD - Trade</h4>
-          </div>
-          <div class="tradesN">
-            <h6>Click trade to open charts</h6>
-          </div>
-        </div>
       </div>
     
       <div class="bottom">
