--- a/trade.html
+++ b/trade.html
@@ -114,7 +114,7 @@
 	}
 	.preTrades{
 		display: flex;
-		margin: 10px;
+		margin-top: 10px;
 	}
 	.preFi{
 		background: rgba(3, 3, 3, 0.05);
@@ -132,6 +132,9 @@
 		margin: 0;
 		font-size: 12px;
 	}
+	.preLa i{
+		margin: auto;
+	} 
     .trades{
 		text-align: center;
 		background: #fff;
@@ -195,6 +198,7 @@
 			</div>
 			<div class="preLa">
 				<p>Edit</p>
+				<i class="fa fa-pencil-square-o" aria-hidden="true"></i>
 			</div>
 		</div>
         <div class="trades">
