--- a/trade.html
+++ b/trade.html
@@ -127,6 +127,7 @@
 		background: rgba(3, 3, 3, 0.05);
 		padding: 5px;
 		border-radius: 10px;
+		display: flex;
 	}
 	.preFi p, .preLa p{
 		margin: 0;
@@ -198,7 +199,7 @@
 			</div>
 			<div class="preLa">
 				<p>Edit</p>
-				<i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+				<i class="fa fa-pencil-square" aria-hidden="true"></i>
 			</div>
 		</div>
         <div class="trades">
