--- a/trade.html
+++ b/trade.html
@@ -128,13 +128,14 @@
 		padding: 5px;
 		border-radius: 10px;
 		display: flex;
+		align-items: center;
 	}
 	.preFi p, .preLa p{
 		margin: 0;
 		font-size: 12px;
 	}
 	.preLa i{
-		margin: auto;
+		margin: 0 5px;
 	} 
     .trades{
 		text-align: center;
