--- a/performance.html
+++ b/performance.html
@@ -233,11 +233,11 @@
       </div>
     
       <div class="bottom">
-        <button onclick="window.location.href='app.html'" class="bottomBtn"><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>      
+        <button onclick="window.location.href='index.html'" class="bottomBtn"><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>      
         <button onclick="window.location.href='trade.html'" class="bottomBtn"><i class="fa fa-area-chart" aria-hidden="true"></i>Trade</button>
-        <button class="bottomBtn"><i class="fa fa-globe" aria-hidden="true"></i>Insights</button>
+        <button onclick="window.location.href='insight.html'" class="bottomBtn"><i class="fa fa-globe" aria-hidden="true"></i>Insights</button>
         <button class="bottomBtn active"><i class="fa fa-heartbeat" aria-hidden="true"></i>Performance</button>     
-        <button class="bottomBtn"><i class="fa fa-user" aria-hidden="true"></i>Profile</button>
+        <button onclick="window.location.href='profile.html'" class="bottomBtn"><i class="fa fa-user" aria-hidden="true"></i>Profile</button>
       </div>
 	</div>
     <script src="sw.js"></script>
