--- a/app.html
+++ b/app.html
@@ -1426,36 +1426,12 @@
 
         <div class="modalBody">
 				<!-- Withdraw -->
-				<div class="history">
-				<div class="histHead">
-					<div class="histOne">
-						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+				<div class="mark">
+					<div style="display: flex;">
+						<img src="mark.jpeg" alt="mark" style="width: 60px; height: 60px; border-radius: 50%;">
+						<p>Hey! Mark</p>
 					</div>
-					<div class="histTwo">
-						<h4>Deposit</h4>
-						<p>3 Nov, 16:49</p>
-						<p>Invoice ID 2038718845</p>
-					</div>
-					<div class="histThree">
-						<h4>+ 20 000.00 NGN</h4>
-						<div class="status">
-							<i class="fa fa-circle" aria-hidden="true"></i><p>Done</p>
-						</div>
-					</div>
-				</div>
-				<div class="histBottom">
-					<div class="histFour">
-						<i class="fa fa-television" aria-hidden="true"></i>
-					</div>
-					<div class="histFive">
-						<p>Online Bank Tra...</p>
-						<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						<p><span>ex</span></p>
-					</div>
-					<div class="histSix">
-						<p>131734923</p>
-					</div>
-				</div>
+					
 				</div>
         </div>
 	  </div>
