--- a/app.html
+++ b/app.html
@@ -1427,8 +1427,8 @@
         <div class="modalBody">
 				<!-- Withdraw -->
 				<div class="mark">
-					<div style="display: flex;">
-						<img src="mark.jpeg" alt="mark" style="width: 60px; height: 60px; border-radius: 50%;">
+					<div style="padding: 10px; display: flex;">
+						<img src="mark.jpeg" alt="mark" style="width: 40px; border-radius: 50%;">
 						<p>Hey! Mark</p>
 					</div>
 					
