--- a/app.html
+++ b/app.html
@@ -1415,7 +1415,7 @@
 	  </div>
 
 		<!-- MAIN WITHDRAW -->
-      <div id="withdraw" class="modal">
+      <div id="withdraw" class="modal active">
         <div class="xclose">
           <button onclick="closeModal('withdraw')">&times;</button>
         </div>
@@ -1428,7 +1428,7 @@
 				<!-- Withdraw -->
 				<div class="mark">
 					<div style="padding: 10px; display: flex;">
-						<img src="mark.jpeg" alt="mark" style="width: 40px; border-radius: 50%;">
+						<img src="mark.jpeg" alt="mark" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 20px;">
 						<p>Hey! Mark</p>
 					</div>
 					
