--- a/app.html
+++ b/app.html
@@ -1428,7 +1428,7 @@
 				<!-- Withdraw -->
 				<div class="mark">
 					<div style="padding: 10px; display: flex;">
-						<img src="mark.jpeg" alt="mark" style="width: 40px; border-radius: 50%;">
+						<img src="mark.jpeg" alt="mark" style="width: 40px; height: 40px; margin-right: 20px; border-radius: 50%;">
 						<p>Hey! Mark</p>
 					</div>
 					
