--- a/app.html
+++ b/app.html
@@ -1427,9 +1427,9 @@
         <div class="modalBody">
 				<!-- Withdraw -->
 				<div class="mark">
-					<div style="padding: 10px; display: flex;">
+					<div style="align-items: center; padding: 10px; display: flex;">
 						<img src="mark.jpeg" alt="mark" style="width: 40px; height: 40px; margin-right: 20px; border-radius: 50%;">
-						<p>Hey! Mark</p>
+						<p style="font-weight: bold;">Hey! Mark</p>
 					</div>
 					
 				</div>
