--- a/app.html
+++ b/app.html
@@ -1415,7 +1415,7 @@
 	  </div>
 
 		<!-- MAIN WITHDRAW -->
-      <div id="withdraw" class="modal">
+      <div id="withdraw" class="modal active">
         <div class="xclose">
           <button onclick="closeModal('withdraw')">&times;</button>
         </div>
