--- a/app.html
+++ b/app.html
@@ -1435,7 +1435,7 @@
 		<div id="dash" class="dashboard">  
         <div class="userDetails">
           <p>Mark Zeba</p>
-          <p id="user">#592631072</p>
+          <p id="user">cv4629620</p>
           <i class="fa fa-angle-right" aria-hidden="true"></i>
         </div>
         
@@ -1450,7 +1450,7 @@
         </div>
         
         <div class="dashButtons">      
-          <button><div class="icon home"><i class="fa fa-area-chart" aria-hidden="true"></i></div>Trade</button>
+          <button><div class="icon" style="background: dodgerblue;"><i class="fa fa-user" aria-hidden="true"></i></div>Balance</button>
           <button onclick="openModal('deposit')"><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
           <button onclick="openModal('withdraw')"><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
