--- a/app.html
+++ b/app.html
@@ -1450,12 +1450,17 @@
         </div>
         
         <div class="dashButtons">      
-          <button><div class="icon" style="background: dodgerblue;"><i class="fa fa-user" aria-hidden="true"></i></div>Balance</button>
+          <button><div class="icon" style="background: #C9E4CA;"><i class="fa fa-user" aria-hidden="true"></i></div>Balance</button>
           <button onclick="openModal('deposit')"><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
           <button onclick="openModal('withdraw')"><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
         </div>
       </div>
+			<div style="text-align: center; margin-top: 20px;">
+				<p>Your Transactions</p>
+				<p>You don't have any pending or ongoing transactions. Click details for shop, donate or transfer and all other history.</p>
+			</div>
+			
         </div>
 	  </div>
 	</div>
